--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         id: generate-snake
         with:
           github_user_name: rairezende
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          svg_out_path: dist/github-contribution-grid-snake.gif
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
